--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.0.0-rc.1",
+    "@mui/material": "^5.3.0",
+    "@prisma/client": "^3.8.0",
+    "firebase": "^9.6.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "prisma": "^3.8.0"
   }
 }
